<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_enable_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="MyOnClick"
            android:text="@string/enable_bt" />

        <Button
            android:id="@+id/btn_discoverable_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="MyOnClick"
            android:text="@string/discoverable_bt" />

        <Button
            android:id="@+id/btn_disable_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="MyOnClick"
            android:text="@string/disable_bt" />

        <Button
            android:id="@+id/btn_paired_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="MyOnClick"
            android:text="@string/paired_devices" />

        <Button
            android:id="@+id/btn_search_devices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="MyOnClick"
            android:text="@string/discover_devices_search" />

        <Button
            android:id="@+id/btn_bluetooth_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="MyOnClick"
            android:text="@string/bluetooth_server" />
    </LinearLayout>

    <ListView
        android:id="@+id/myList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/layout" />

</RelativeLayout>